Fix template backends application